--- a/src/ibcarousel.less
+++ b/src/ibcarousel.less
@@ -1,3 +1,12 @@
 .ibcarousel {
+  outline: 1px dashed red;
 
+  white-space: nowrap;
+  overflow: hidden;
+
+  & > * {
+    outline: 1px solid blue;
+
+    display: inline-block;
+  }
 }
