Changed plugin boilerplate

--- a/src/ibcarousel.less
+++ b/src/ibcarousel.less
@@ -1,12 +1,9 @@
 .ibcarousel {
-  outline: 1px dashed red;
-
   white-space: nowrap;
   overflow: hidden;
+  transition: ease .5s all;
 
   & > * {
-    outline: 1px solid blue;
-
     display: inline-block;
   }
 }
