--- a/src/ibcarousel-layout.less
+++ b/src/ibcarousel-layout.less
@@ -1,7 +1,10 @@
-.col-1_4 {
+.ibcarousel {
   width: 50%;
   margin: 0 auto;
+  border: 1px solid #ccc;
+}
 
+.col-1_4 {
   & > * {
     width: 25%;
   }
